src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/ARBES2Compatibility_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/ARBES2Compatibility_StringErrorContext.class */
public final class ARBES2Compatibility_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glReleaseShaderCompiler()V", "net/labymod/core/laby3d/opengl/error/generated/ARBES2CompatibilityErrorContext");
        methods.put("nglShaderBinary(IJIJI)V", "net/labymod/core/laby3d/opengl/error/generated/ARBES2CompatibilityErrorContext");
        methods.put("glShaderBinary(Ljava/nio/IntBuffer;ILjava/nio/ByteBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/ARBES2CompatibilityErrorContext");
        methods.put("nglGetShaderPrecisionFormat(IIJJ)V", "net/labymod/core/laby3d/opengl/error/generated/ARBES2CompatibilityErrorContext");
        methods.put("glGetShaderPrecisionFormat(IILjava/nio/IntBuffer;Ljava/nio/IntBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/ARBES2CompatibilityErrorContext");
        methods.put("glGetShaderPrecisionFormat(IILjava/nio/IntBuffer;)I", "net/labymod/core/laby3d/opengl/error/generated/ARBES2CompatibilityErrorContext");
        methods.put("glDepthRangef(FF)V", "net/labymod/core/laby3d/opengl/error/generated/ARBES2CompatibilityErrorContext");
        methods.put("glClearDepthf(F)V", "net/labymod/core/laby3d/opengl/error/generated/ARBES2CompatibilityErrorContext");
        methods.put("glShaderBinary([IILjava/nio/ByteBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/ARBES2CompatibilityErrorContext");
        methods.put("glGetShaderPrecisionFormat(II[I[I)V", "net/labymod/core/laby3d/opengl/error/generated/ARBES2CompatibilityErrorContext");
        return methods;
    }
}
